name:              yist
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Create
                     Handler.Read
                     Handler.Update
                     Handler.Delete
                     Handler.User
                     Handler.Utils

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.2.0      && < 1.3
                 , yesod-core                    >= 1.2.0      && < 1.3
                 , yesod-auth                    >= 1.2.0      && < 1.3
                 , yesod-static                  >= 1.2.0      && < 1.3
                 , yesod-default                 >= 1.2.0      && < 1.3
                 , yesod-form                    >= 1.3.0      && < 1.4
                 , clientsession                 >= 0.9        && < 1.0
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , time                          >= 1.4        && < 1.5
                 , persistent                    >= 1.2.0      && < 1.3
                 , persistent-mongoDB            >= 1.2.0      && < 1.3
                 , persistent-template           >= 1.2.0      && < 1.3
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0.2      && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.9        && < 2.0
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 1.3        && < 1.4
                 , data-default
                 , aeson
                 , system-filepath
                 , mtl                           >= 2.1        && < 2.2
                 , Diff                          >= 0.3        && < 0.4
                 , gitlib                        >= 1.3        
                 , gitlib-libgit2                >= 1.3

executable         yist
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , yist
                     , yesod-default

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , yist
                 , yesod-test >= 0.3 && < 0.4
                 , yesod-default
                 , yesod-core
                 , persistent
                 , persistent-mongoDB
